--- a/logistic-html/assets/scss/components/_form.scss
+++ b/logistic-html/assets/scss/components/_form.scss
@@ -124,7 +124,11 @@
         }
     }
 
-
+    textarea {
+        padding-top: 9px;
+        padding-bottom: 9px;
+        height: 100px;
+    }
 
 }
 
