--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -17,6 +17,9 @@
 @import  './components/animate';
 @import  './components/text-slide';
 @import  './components/features';
+@import  './components/testimonial';
+@import  './components/faq';
+@import  './components/contact';
 /* 
     laa-css-end
 */
