--- a/logistic-html/assets/scss/components/_components.scss
+++ b/logistic-html/assets/scss/components/_components.scss
@@ -2,6 +2,20 @@
     components-start
 */
 
+.txaa-split-text-3 {
+    text-transform: unset  !important;
+
+    .split-line {
+        .div {
+            div {
+                &:nth-child(1) {
+                    text-transform: capitalize;
+                }
+
+            }
+        }
+    }
+}
 
 .laa-scn-margin {
     margin-left: 20px;
@@ -16,6 +30,10 @@
 .laa-hight-20 {
     width: 100%;
     height: 20px;
+}
+
+.laa-redius-20 {
+    border-radius: 20px;
 }
 
 
@@ -188,7 +206,7 @@
         width: 0px;
         height: 2px;
         transition: 0.3s ease-in-out;
-        top: 49%;
+        top: 50%;
         left: 45%;
         transform: translate(-50% , -50%);
         background-color: rgb(255 255 255 / 32%);
@@ -247,7 +265,7 @@
         width: 0px;
         height: 2px;
         transition: 0.3s ease-in-out;
-        top: 49%;
+        top: 50%;
         left: 55%;
         transform: translate(-50% , -50%);
         background-color: rgb(255 255 255 / 32%);
