--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -20,6 +20,8 @@
 @import  './components/testimonial';
 @import  './components/faq';
 @import  './components/contact';
+@import  './components/newsletter';
+@import  './components/footer';
 /* 
     laa-css-end
 */
