--- a/logistic-html/assets/css/style.css
+++ b/logistic-html/assets/css/style.css
@@ -2114,7 +2114,7 @@ body {
 body:not(.laa-home) .container {
   max-width: 1330px;
 }
-body .split-line {
+body:not(.laa-home) .split-line {
   overflow: hidden;
 }
 body .mfp-iframe-holder .mfp-close {
