--- a/logistic-html/assets/scss/components/_services.scss
+++ b/logistic-html/assets/scss/components/_services.scss
@@ -282,6 +282,13 @@
                 z-index: -1;
                 width: 100%;
                 height: 100%;
+
+                img {
+                    filter: blur(5px);
+                    transform: translateX(100px) scale(110%);
+                    transition: all 4s var(--laa-cube-1);
+                    transition-delay: 0s;
+                }
             }
 
             .item-title {
@@ -289,8 +296,13 @@
                 color: #fff;
                 line-height: 1.177;
                 max-width: 510px;
+                overflow: hidden;
 
-                
+                .split-line {
+                    transform: translateX(100%);
+                    transition: all 1.5s var(--laa-cube-1);
+                    transition-delay: 0s;
+                }
 
                 .clr-pr {
                     color: var(--laa-clr-sd-1);
@@ -321,6 +333,51 @@
                 bottom: 0;
                 left: 0;
                 z-index: 1;
+            }
+        }
+
+        .swiper-container {
+            .swiper-wrapper {
+                .swiper-slide {
+                    &:is(.swiper-slide-active) {
+                        .laa-services-2-slider-item {
+                            .laa-ani-box-1 , .laa-ani-box-2, .laa-ani-box-3, .laa-ani-box-4 {
+                                transform: rotateY(0deg);
+                                transform: rotateX(0deg);
+                                transition-delay: 1s;
+                            }
+                            .laa-ani-box-2 {
+                                transition-delay: 1.5s;
+                            }
+                            .laa-ani-box-3 {
+                                transition-delay: 2s;
+                            }
+                            .laa-ani-box-4 {
+                                transition-delay: 2.5s;
+                            }
+                        }
+
+                        .split-line {
+                            transform: translateX(0%);
+                            transition-delay: 1s;
+
+                            &:nth-child(2) {
+                                transition-delay: 1.3s;
+                            }
+
+                            &:nth-child(3) {
+                                transition-delay: 1.6s;
+                            }
+
+                        }
+
+                        .laa-services-2-slider-item .item-bg img {
+                            transform: translateX(0px) scale(100%);
+                            filter: blur(0);
+                            transition-delay: .5s;
+                        }
+                    }
+                }
             }
         }
     }
