--- a/logistic-html/assets/scss/components/_hero.scss
+++ b/logistic-html/assets/scss/components/_hero.scss
@@ -38,6 +38,26 @@
                         left: 0;
                         background: linear-gradient(90deg, rgba(26, 45, 78, 1) 35%, rgba(0, 212, 255, 0) 100%);
                     }
+    
+                    &::before {
+                        content: "";
+                        width: 100%;
+                        height: 100%;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        background: linear-gradient(90deg, rgba(26, 45, 78, 1) 80%, rgba(0, 212, 255, 0) 100%);
+                        z-index: 1;
+                        transition: all 3s var(--laa-cube-1);
+                        opacity: .8;
+                    }
+
+                    img {
+                        filter: blur(10px);
+                        transform: translateX(100px) scale(110%);
+                        transition: all 4s var(--laa-cube-1);
+                        transition-delay: 0s;
+                    }
                 }
 
                 .bg-shape {
@@ -132,10 +152,23 @@
                                 }
                             }
 
-                            
                         }
 
                         .laa-hero-1-slider-item-bg {
+                            .item-bg {
+                                &::before {
+                                    width: 0%;
+                                    transition-delay: .5s;
+                                }
+
+                                img {
+                                    transform: translateX(0px) scale(100%);
+                                    filter: blur(0);
+                                    transition-delay: .5s;
+                                }
+                            }
+
+
                             .laa-ani-box-1 , .laa-ani-box-2, .laa-ani-box-3, .laa-ani-box-4 {
                                 transform: rotateY(0deg);
                                 transform: rotateX(0deg);
